# BardicanAI

./: .gitignore  README.md
_bmad-output/brainstorming/: brainstorming-session-2026-03-05-100420.md
_bmad-output/implementation-artifacts/: 1-1-project-initialization-and-dev-environment.md  1-2-workspace-shell-and-split-pane-layout.md  1-3-strudel-code-editor-integration.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-07.md  prd-validation-report.md  prd.md  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: antigravity.yaml  claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
bardicanai-api/: .env.example  .gitignore  pyproject.toml
bardicanai-api/app/: main.py
bardicanai-api/tests/: test_health.py
bardicanai-web/: package.json  pnpm-lock.yaml  vitest.config.ts
bardicanai-web/src/app/: globals.css  layout.tsx  page.tsx
bardicanai-web/src/components/: Providers.tsx
bardicanai-web/src/lib/: constants.ts
bardicanai-web/src/stores/: chatSlice.ts  editorSlice.ts  patchSlice.ts  playbackSlice.ts  sessionSlice.ts  uiSlice.ts  useAppStore.test.ts  useAppStore.ts
bardicanai-web/src/types/: api.ts  store.ts
docs/superpowers/plans/: 2026-03-12-story-1-2-workspace-shell-and-split-pane-layout.md
docs/superpowers/specs/: 2026-03-12-story-1-2-workspace-shell-design.md
stitch-downloads/: bardicanai-workspace.html
(+7 files in other folders)
