[project]
name = "bardicanai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "pgvector>=0.4.2",
    "pydantic-ai-litellm>=0.2.3",
    "pydantic-ai[anthropic,google]>=1.67.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
]
